# project-phoenix-mmi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: research-question.md
.github/workflows/: quality.yml
docs/: 000-project-charter.md  001-roadmap.md  002-research-method.md
docs/decisions/: ADR-0001-artifact-policy.md
docs/research-questions/: README.md
docs/safety/: lab-safety.md
docs/sessions/: SESSION-000-foundation.md  SESSION-001-iso-filesystem-inventory.md  SESSION-002-metainfo-update-model.md  SESSION-003-mmi-bin-static-analysis.md  SESSION-004-superh-vxworks-layout.md  SESSION-005-browser-resource-bundle.md  SESSION-006-runtime-address-map.md  SESSION-007-reference-graph-owner-evidence.md  SESSION-008-firmware-operational-model.md  SESSION-009-navigation-storage-boundary.md  SESSION-010-navigation-dataflow-optical-contract.md  (+15 more)
scripts/: bootstrap-lab.sh
sdk/: README.md
tests/: test_accessor_dispatch.py  test_analysis.py  test_binary.py  test_continuation_contract.py  test_descriptor_lineage.py  test_iso9660.py  test_layout.py  test_linkage_owner.py  test_map_media.py  test_map_payload.py  test_navigation_dataflow.py  test_navigation_storage.py  test_object_dispatch.py  test_operational_model.py  test_optical_callgraph.py  test_owner_caller.py  test_owner_provenance.py  test_parser_dataflow.py  test_parser_search.py  test_reference_graph.py  test_resource_bundle.py  test_runtime_linkage.py  test_runtime_map.py  test_runtime_slot.py  test_superh.py
(+197 files in other folders)
